3.3.0
-----
Logic refactor for v11 rewrite
Added scaffolding for future keysanity support
Cap missiles, supers, and power bombs at fixed max values used by the randomizer (200, 80, 50 respectively)

3.2.2
-----
Norfair Missile (lava room) is now capturable

3.2.1
-----
Slight efficiency improvement to only update dungeon locations if data actually changes

3.2.0
-----
Added dungeon location autotracking for LTTP
Removed version number from package name (this works with v11 beta so far)

3.1.9
-----
Sand pit items and Aqueduct missiles in SM are now capturable

3.1.8
-----
Fixed capture locations so they turn red after marking the item contained there
Replaced LTTP maps with newer versions from the official LTTPR pack

3.1.7
-----
Removed duplicate Speed Booster location on Norfair zone map
Added missing room on Brinstar map

3.1.6
-----
Rename standard variant to be clear it includes autotracking support

3.1.5
-----
Fixed pink Brinstar missile locations on Brinstar zone map

3.1.4
-----
All single toggle items now loop with successive mouse clicks

3.1.3
-----
Trying (hopefully) more reliable detection of in-game status to prevent incorrect data reads on reset

3.1.2
-----
Fixed missing fireflea room on Lower Norfair map
Added Triforce symbols for LTTP portals on SM zone maps
Cleaned up item codes for better ChatHUD support

3.1.1
-----
Changed combined all maps layout so LTTP is stacked on one side and it's less crammed

3.1.0
-----
Added heart piece/container counter (cannot be autotracked currently due to technical limitations)
Added combined map option to show all maps on one screen
Fixed autotracking support for Bizhawk emulator (requires its own separate variant)

3.0.0
-----
Dorkmaster Flek takes over the project
Updated to use new pack format
Added GT location in LTTP for tracking since SM items can be in there
Fixed accessing East Norfair in Hard with Varia + Ice + Supers and access to Business Center