@@ -2,6 +2,7 @@
 -----
 Logic refactor for v11 rewrite
 Added scaffolding for future keysanity support
+Added SM boss locations for items that require the boss to be defeated similar to Castle Tower with Aga1
 Cap missiles, supers, and power bombs at fixed max values used by the randomizer (200, 80, 50 respectively)
 
 3.2.2
